fix the issue that footer overlaps on other elements

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -22,6 +22,7 @@ span {
 div {
   &#main {
     padding: 10px;
+    padding-bottom: 60px;
   }
 
   &#btn-reset {
